--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,21 +2,28 @@
     <h2>
         lista de vacantes
     </h2>
-    <div class="vacante">
-        <div class="caja">
-            <h3>Faceboook</h3>
-            <p class="puesto    ">React Developer</p>
-        </div>
-        <div class="caja">
-            <p class="etiqueta">Ubicacion</p>
-            <p class="nombre">Remoto</p>
-        </div>
-        <div class="caja">
-            <p class="etiqueta">Contrato</p>
-            <p class="nombre contrato">Tiempo Completo</p>
-        </div>
-        <div class="caja central-vertical">
-            <a href="#" class="btn btn-verde">Mas Info</a>
-        </div>
-    </div>
+    
+ {{#if vacantes.length}}
+        {{#each vacantes as | vacante |}}
+            <div class="vacante">
+                <div class="caja">
+                    <h3>{{vacante.empresa}}</h3>
+                    <p class="puesto">{{vacante.titulo}}</p>
+                </div>
+                <div class="caja">
+                    <p class="etiqueta">Ubicación</p>
+                    <p class="nombre">{{vacante.ubicacion}}</p>
+                </div>
+                <div class="caja">
+                    <p class="etiqueta">Contrato</p>
+                    <p class="nombre contrato">{{vacante.contrato}}</p>
+                </div>
+                <div class="caja centrar-vertical">
+                    <a href="/vacantes/{‌{vacante.url}}" class="btn btn-verde">Más Info</a>
+                </div>
+            </div> <!--.vacante-->
+        {{/each}}
+    {{else}}
+        <p>No hay Vacantes</p>
+    {{/if}}
 </main>
