arreglando vista de vacantes

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -19,7 +19,7 @@
                     <p class="nombre contrato">{{vacante.contrato}}</p>
                 </div>
                 <div class="caja centrar-vertical">
-                    <a href="/vacantes/{‌{vacante.url}}" class="btn btn-verde">Más Info</a>
+                    <a href="/vacantes/{{vacante.url}}" class="btn btn-verde">Más Info</a>
                 </div>
             </div> <!--.vacante-->
         {{/each}}
