arrelgando vista de vacante

--- a/views/vacante.handlebars
+++ b/views/vacante.handlebars
@@ -1,6 +1,6 @@
 <div class="contenido-superior vacante contenedor">
     <div class="caja">
         <p class="etiqueta">Empresa</p>
-        <p class="nombre">{{vacantes.Empresa}}</p>
+        <p class="nombre">{{vacante.Empresa}}</p>
     </div>
 </div>
