arreglando error de ruta en la vista

--- a/views/editar-vacantes.handlebars
+++ b/views/editar-vacantes.handlebars
@@ -1,5 +1,5 @@
 <main class="contenedor">
-    <form method="POST" action="/vacantes/editar/:{{vacante.url}}" class="default-form">
+    <form method="POST" action="/vacantes/editar/{{vacante.url}}" class="default-form">
         <h3>Informacion General</h3>
 
         <div class="campo">
