arreglando la vista

--- a/views/iniciar-sesion.handlebars
+++ b/views/iniciar-sesion.handlebars
@@ -10,7 +10,7 @@
             <input type="password" name="password" placeholder="Tu Password" required>
         </div>
 
-        <div class="campo accioes">
+        <div class="campo acciones">
             <a href="/crear-cuenta">Crear una cuenta</a>
             <a href="/restablecer-password">Olvide mi password</a>
         </div>
