--- a/views/iniciar-sesion.handlebars
+++ b/views/iniciar-sesion.handlebars
@@ -1,13 +1,13 @@
 <main class="contenedor">
-    <form action="/iniciar-sesion" method="POST" class="default-form">
+    <form action="iniciar-sesion" method="POST" class="default-form">
         <div class="campo">
             <label>E-mail</label>
-            <input type="text" name="email" placeholder="Tu Email" required>
+            <input type="text" name="email" placeholder="Tu Email">
         </div>
 
         <div class="campo">
             <label>Password</label>
-            <input type="password" name="password" placeholder="Tu Password" required>
+            <input type="password" name="password" placeholder="Tu Password">
         </div>
 
         <div class="campo acciones">
