agregando barra de navegacion

--- a/views/administracion.handlebars
+++ b/views/administracion.handlebars
@@ -17,7 +17,7 @@
                 </div>
 
                 <div class="centrar-vertical caja">
-                    <a href="/vacantes/{{url}}" class="btn btn-verde">Editar</a>
+                    <a href="/vacantes/editar/{{url}}" class="btn btn-verde">Editar</a>
                 </div>
 
                 <div class="centrar-vertical caja">
