cerrando sesion finalizada

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -28,7 +28,7 @@
             <div class="cerrar-sesion">
                 <p>Hola! {{nombre}}</p>
                 <a href="/administracion">Administracion</a>
-                <a href="/cerrar/sesion">Cerrar Sesion</a>
+                <a href="/cerrar-sesion">Cerrar Sesion</a>
             </div>
 
          {{/if}}
