--- a/views/nueva-vacante.handlebars
+++ b/views/nueva-vacante.handlebars
@@ -4,22 +4,22 @@
 
         <div class="campo">
             <label>Titulo:</label>
-            <input type="text" name="titulo" placeholder="Ej: Reack Developer" required>
+            <input type="text" name="titulo" placeholder="Ej: Reack Developer">
         </div>    
 
         <div class="campo">
             <label>Empresa:</label>
-            <input type="text" name="empresa" placeholder="Ej: Empresa Contratar" required>
+            <input type="text" name="empresa" placeholder="Ej: Empresa Contratar">
         </div> 
 
         <div class="campo">
             <label>Ubicacion:</label>
-            <input type="text" name="ubicacion" placeholder="Ej: El Salvador o Remoto" required>
+            <input type="text" name="ubicacion" placeholder="Ej: El Salvador o Remoto">
         </div> 
 
         <div class="campo">
             <label>Salario (USD):</label>
-            <input type="text" name="salario" placeholder="Ej: 500 USD" required>
+            <input type="text" name="salario" placeholder="Ej: 500 USD">
         </div> 
 
         <div class="campo">
