--- a/views/vacante.handlebars
+++ b/views/vacante.handlebars
@@ -35,3 +35,13 @@
         </ul>
     </aside>
 </div>
+<div class="info-reclutador">
+        <h2>Información Reclutador</h2>
+        {{#if vacante.autor.nombre}}
+            <p>{{vacante.autor.nombre}}</p>
+        {{/if}}
+        {{#if vacante.autor.imagen}}
+            <img src="/uploads/perfiles/{{vacante.autor.imagen}}">
+        {{/if}}
+    </div>
+</div>
