--- a/views/iniciar-sesion.handlebars
+++ b/views/iniciar-sesion.handlebars
@@ -12,7 +12,7 @@
 
         <div class="campo acciones">
             <a href="/crear-cuenta">Crear una cuenta</a>
-            <a href="/restablecer-password">Olvide mi password</a>
+            <a href="/reestablecer-password">Olvide mi password</a>
         </div>
         <div class="campo">
             <input type="submit" value="Iniciar Sesion" class="btn btn-azul">
